# empire5

./: .dockerignore  .gitignore  CREDITS  Cargo.toml  Dockerfile  README.md  docker-compose.yml
bots/: country1_bot.py  empire-country-1.sh
clients/ptkei/: .gitignore  README.md  empire.py  first.emp  start.emp
clients/ptkei/src/: CenWin.py  MapWin.py  empCmd.py  empDb.py  empEval.py  empParse.py  empQueue.py
config/: empire.toml
configs/: blitz.toml  longterm.toml  standard.toml  weekend.toml
crates/empire-client/: Cargo.toml
crates/empire-client/src/: main.rs
crates/empire-config/: Cargo.toml
crates/empire-config/src/: lib.rs  rdsched.rs
crates/empire-db/: Cargo.toml
crates/empire-db/src/: bmap.rs  land_units.rs  lib.rs  loans.rs  nations.rs  news.rs  nukes.rs  planes.rs  relations.rs  scan.rs  sectors.rs  ships.rs  telegrams.rs  trades.rs  xdump.rs  xundump.rs
crates/empire-db/src/migrations/: 001_initial.sql  002_passwords.sql  003_che_fields.sql  004_thresholds_and_relations.sql  005_trade_loans.sql  006_telegrams.sql  007_news.sql
crates/empire-server/: Cargo.toml
crates/empire-server/src/: error.rs  journal.rs  main.rs  marketup.rs  protocol.rs  session.rs  state.rs  update.rs
crates/empire-server/src/commands/: add.rs  announce_cmd.rs  army_cmd.rs  assault_cmd.rs  attack.rs  board_cmd.rs  bomb.rs  budget_cmd.rs  build.rs  buy.rs  capital.rs  census.rs  change.rs  commodity.rs  ctx.rs  declare.rs  deliver.rs  demobilize_cmd.rs  designate.rs  distribute.rs  dump.rs  enable.rs  enlist_cmd.rs  execute_cmd.rs  explore.rs  fire_cmd.rs  fleetadd_cmd.rs  fly.rs  force.rs  info.rs  land_cmd.rs  launch.rs  llook_cmd.rs  load_cmd.rs  loan.rs  look_cmd.rs  lradar_cmd.rs  map_cmd.rs  march.rs  mission.rs  (+36 more)
crates/empire-server/src/subs/: aircombat.rs  attsub.rs  control.rs  damage.rs  fortsub.rs  geo.rs  interdict.rs  lndsub.rs  lookout.rs  mod.rs  nat_util.rs  pathfind.rs  plnsub.rs  satsub.rs  shipcarry.rs  shpsub.rs  takeover.rs  tech.rs
crates/empire-types/: Cargo.toml
crates/empire-types/src/: commodity.rs  coords.rs  item_chr.rs  land.rs  land_chr.rs  lib.rs  loan.rs  nation.rs  news.rs  nuke.rs  plane.rs  plane_chr.rs  product_chr.rs  sector.rs  sector_chr.rs  selector.rs  ship.rs  ship_chr.rs  trade.rs  unit.rs
crates/empire-util/: Cargo.toml
crates/empire-util/src/: empdump.rs  empsched.rs  pconfig.rs
crates/empire-world/: Cargo.toml
crates/empire-world/src/: fairland.rs  main.rs
docker/: empire.toml  entrypoint.sh
info/: add  announce  army  attack  basics  board  bomb  bridge  btu  budget  build  buy  capital  census  change  commodity  declare  deliver  demobilize  designate  distribute  dump  enable  enlist  execute  explore  fire  fleetadd  fly  game-speed  happiness  info  intro  land  launch  llook  load  loan  look  lradar  (+45 more)
