[package]
name = "empire-util"
description = "Empire 5 server utilities (dump, sched, pconfig)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "empdump"
path = "src/empdump.rs"

[[bin]]
name = "empsched"
path = "src/empsched.rs"

[[bin]]
name = "pconfig"
path = "src/pconfig.rs"

[dependencies]
empire-types  = { workspace = true }
empire-db     = { workspace = true }
empire-config = { workspace = true }
clap   = { workspace = true }
tokio  = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
