[package]
name = "empire-world"
description = "World generator for Empire 5 (port of fairland)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "empire-world"
path = "src/main.rs"

[dependencies]
empire-types  = { workspace = true }
empire-db     = { workspace = true }
empire-config = { workspace = true }
clap   = { workspace = true }
rand   = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio  = { workspace = true }
